--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
     "crypto-js": "^4.0.0",
+    "element-ui": "^2.15.1",
     "klinecharts": "^7.0.0",
     "moment": "^2.29.1",
     "qs": "^6.10.1",
@@ -21,6 +22,7 @@
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-component": "^1.1.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "vue-template-compiler": "^2.6.11"
