--- a/my-electron-app/package.json
+++ b/my-electron-app/package.json
@@ -5,9 +5,39 @@
   "description": "My Electron app",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "pack":"electron-builder --dir",
+    "dist":"electron-builder"
   },
   "devDependencies": {
+    
     "electron": "^12.0.4"
-  }
+  },
+  "build":{
+    "appId":"com.azimiao.test",
+    "asar":true,
+    "directories":{
+        "buildResources":"build",
+        "output":"dist"
+    },
+    "win":{
+        "target": [{
+            "target":"nsis"
+        }],
+        "icon":"build/favicon.ico",
+        "asarUnpack":[
+            "src/**",
+            "README.md"
+        ]
+    },
+    "nsis":{
+        "oneClick":false,
+        "allowElevation":true,
+        "allowToChangeInstallationDirectory":true,
+        "installerIcon":"build/favicon.ico",
+        "uninstallerIcon":"build/favicon.ico",
+        "createDesktopShortcut": true,
+        "createStartMenuShortcut": true
+    }
+}
 }
